<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>frenchchic</artifactId>
        <groupId>org.glassfish.frenchchic</groupId>
        <version>8.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <packaging>war</packaging>

    <properties>
        <!-- General Properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <versions.maven.compiler>3.6.1</versions.maven.compiler>
        <versions.json>20160810</versions.json>
        <versions.java>1.8</versions.java>
        <!-- J2E 7.x technological stack -->
        <versions.javaee>7.0-1</versions.javaee>
        <versions.openejb>7.0.2</versions.openejb>
        <versions.tomee>7.0.2</versions.tomee>
        <versions.openjpa>2.4.1</versions.openjpa>
        <versions.myface>2.2.10</versions.myface>
        <!-- Testing dependencies -->
        <versions.maven.surefire>2.19.1</versions.maven.surefire>
        <versions.junit>4.13</versions.junit>
        <versions.mockito>1.10.19</versions.mockito>
        <versions.cukespace>1.6.5</versions.cukespace>
        <versions.arquillian.junit>1.1.12.Final</versions.arquillian.junit>
        <versions.arquilian.jta>1.0.3.Final</versions.arquilian.jta>
        <versions.shrinkwrap>2.2.6</versions.shrinkwrap>
    </properties>

    <artifactId>back-end</artifactId>
    <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
    <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.19</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${versions.json}</version>
        </dependency>
        <!-- Dependencies for the OpenEJB framework (provided at runtime by the app server) -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${versions.javaee}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-api</artifactId>
            <version>8.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-core</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependency to integrate REST clients (order matters for CXF) (provided) -->
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>openejb-cxf-rs</artifactId>
            <version>${versions.openejb}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependencies for the JSF framework (provided)-->
        <dependency>
            <groupId>org.apache.myfaces.core</groupId>
            <artifactId>myfaces-api</artifactId>
            <version>${versions.myface}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) (tests only) -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${versions.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomee</groupId>
            <artifactId>arquillian-tomee-embedded</artifactId>
            <version>${versions.tomee}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <build>
        <finalName>ff-backend</finalName>
        <defaultGoal>package</defaultGoal>



        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.apache.openejb</groupId>
                                    <artifactId>openejb-javaagent</artifactId>
                                    <version>4.6.0</version>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>



        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>8</source>
                        <target>8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${versions.maven.surefire}</version>
                    <configuration>
                        <!--                        <forkMode>always</forkMode>-->
                        <!-- otherwise openejb embedded and tomee embedded shares the same context and EJBContainer is broken -->
                        <reuseForks>false</reuseForks>
                        <argLine>-javaagent:${project.basedir}/target/openejb-javaagent-4.6.0.jar</argLine>
                        <workingDirectory>${project.basedir}/target</workingDirectory>
                        <excludes>
                            <exclude>**/integration/**</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomee.maven</groupId>
                    <artifactId>tomee-maven-plugin</artifactId>
                    <version>${versions.tomee}</version>
                    <configuration>
                        <!-- From TomEE to TomEE+ to support the web services stack -->
                        <tomeeClassifier>plus</tomeeClassifier>
                        <args>-Xmx512m -XX:PermSize=256m</args>
                        <deployOpenEjbApplication>true</deployOpenEjbApplication>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.openjpa</groupId>
                    <artifactId>openjpa-maven-plugin</artifactId>
                    <version>${versions.openjpa}</version>
                    <configuration>
                        <includes>**/beans/*.class</includes>
                        <addDefaultConstructor>true</addDefaultConstructor>
                        <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
                    </configuration>
                    <executions>
                        <execution>
                            <id>enhancer</id>
                            <phase>process-classes</phase>
                            <goals>
                                <goal>enhance</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.openjpa</groupId>
                            <artifactId>openjpa</artifactId>
                            <!-- set the version to be the same as the level in your runtime -->
                            <version>1.2.2</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>